--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div><input type="password" placeholder="password"></div>
         <br>
         <button>Login</button>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio placeat est porro, </p>
+        <br><button>checkout</button>
 
     </fieldset>
 </body>
